# ads-solana-dioxus

./: Cargo.toml  Dioxus.toml
public/: tailwind.css
src/: main.rs
src/api/: mod.rs  service_solana.rs
src/components/: cards.rs  list.rs  menu.rs  mod.rs  new_campaign.rs
src/context/: campaigns.rs  menu.rs  mod.rs
src/pages/: home.rs
